<resources>
    <string name="app_name">AidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aid APP</string>
    <string name="nav_header_subtitle">Aplicación Móvil de Primeros Auxilios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Contactanos">Contacto de Emergencia</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Bienvenido a nuestra Aplicación</string>
    <string name="welcome_text2">¡Todos somos capaces de ayudar!</string>
    <string name="Objetivo">AidApp te brinda acceso instantáneo a la información que necesitas saber para manejar
    las emergencias de primeros auxilios más comunes. Con vídeos, cuestionarios interactivos y consejos paso a paso,
    salvar vidas está en tus manos.</string>

    <string name="acerca">Esta aplicación fue creada por 5 estudiantes de la carrera de Ingeniería en Sistemas de Información
    de la Universidad Centroamericana de Nicaragua, como parte de la asignatura de Desarrollo de Aplicaciones Móviles,
    con la finalidad de ayudar a las personas a saber manejar situaciones que implique conocer acerca de Primeros Auxilios</string>

    <string name="valorar">Por favor, valora la calidad de nuestra App</string>
    <string name="hospital_desc">Información de contacto de hospitales según el departamento que este ubicado en Nicaragua</string>
    <string name="map">Mapa de Hospitales</string>
    <string name="map_desc">Ubicación de los hospitales mas importantes de Nicaragua marcados en un mapa.</string>


</resources>