<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@color/red"
            android:src="@drawable/logo2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_text2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>